<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/my_profile"
        android:title="@string/my_profile"
        android:icon="@mipmap/baseline_account_circle_white_24"
        app:showAsAction="always"/>

    <!-- Este icono se mostrará cuando no haya nada en el carrito -->
    <item
        android:id="@+id/shopping_cart"
        android:title="@string/my_order"
        android:icon="@mipmap/baseline_shopping_cart_white_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/my_order"
        android:title="@string/my_order"
        android:icon="@mipmap/baseline_shopping_cart_white_24"
        android:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@mipmap/baseline_contact_support_white_24"
        app:showAsAction="ifRoom"/>

</menu>