<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- Logo de la app -->
        <ImageView
            android:src="@drawable/ic_launcher_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="ContentDescription"/>

        <!-- Label del email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorEnabled="true">
            <EditText android:id="@+id/activity_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Label de la contraseña -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/activity_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Botón para efectuar el sign up -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_sign_up_signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/signup_button"
            android:fontFamily="@font/roboto"/>

        <!-- Texto que enlaza con LoginActivity -->
        <TextView android:id="@+id/activity_sign_up_loginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_link"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:gravity="center"/>
    </LinearLayout>

</ScrollView>